deploy/k8/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: wiki
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "wiki"}'
spec:
  selector:
    app.kubernetes.io/component: wiki
    app.kubernetes.io/name: wiki
    name: wiki
  ports:
    - name: http
      port: 3000
      targetPort: 80
