deploy/k8/wiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wiki
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: biomes
    networking.gke.io/managed-certificates: "wiki"
    kubernetes.io/ingress.global-static-ip-name: biomes-wiki
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  name: http
